fixgappp

--- a/css/mediaquery/responsivdade.css
+++ b/css/mediaquery/responsivdade.css
@@ -347,6 +347,7 @@
     .hero__text {
         align-items: center;
         justify-content: center;
+        gap: 10rem;
     }
     .hero__text .container__description {
         margin-left: 0;
